--- a/Facilitatory.html
+++ b/Facilitatory.html
@@ -59,7 +59,7 @@
     <div class="vazio"></div>
      <div class="baixar">
         <h2>Baixe agora Facilitatory to ffmpeg:</h2>
-        <a href="https://drive.google.com/link-do-seu-app" target="_blank">
+        <a href="https://github.com/Haduka1/Facilitatory/releases/download/v1.0/Facilitatory.exe" target=".exe">
             <button class="botao1">Download do Aplicativo</button>
         </a>
         </div>
