--- a/index.html
+++ b/index.html
@@ -3,72 +3,202 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Facilitatory</title>
     <style>
-
-         body {
-            font-family: Arial, sans-serif;
+        body {
             text-align: center;
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
         header {
             background-color: black;
             color: #00FF00;
             padding: 20px;
-
+            font-family: 'Courier New', monospace;
         }
 
-        .vazio {
+        nav {
+            background-color: black;
+            padding: 10px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        nav a {
+            color: #00FF00;
+            text-decoration: none;
+            margin: 0 15px;
+            font-family: 'Courier New', monospace;
+            font-size: 1.2rem;
+        }
+
+        main {
             padding: 20px;
-            background-color: #696969;
         }
 
-        .botao1 {
+        .baixar {
+            margin-top: 100px;
+            border: 1px solid black;
+            padding: 40px;
+        }
+
+        .baixar .botao1 {
             background-color: #4CAF50;
             color: white;
             padding: 10px 20px;
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            font-size: 1.2rem;
+        }
+
+        .tutorial-info {
+            font-size: 1.5rem;
+            margin: 40px;
+        }
+
+        .tutorial {
+            margin: 50px auto;
+            padding: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+            display: none; /* Escondido inicialmente */
+            border: 1px solid black;
+        }
+
+        .tutorial h3 {
+            font-size: 2rem;
+            color: black; /* Alterado para preto */
+        }
+
+        .tutorial-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); /* Duas colunas */
+            gap: 20px;
+            justify-items: center;
+        }
+
+        .tutorial-item img {
+            width: 90%;
+            border: 2px solid #ccc;
+            border-radius: 5px;
         }
 
         .pix {
-            margin-top: 100px;
-            margin-bottom: 40px;
+            margin-top: 200px;
+            font-size: 1.4rem;
         }
 
         .pix_img {
-            width: 20%;
+            width: 40%;
         }
 
+        footer {
+            background-color: #f0f0f0;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .show-tutorial-btn {
+            background: none;
+            color: black;
+            font-size: 1.4rem;
+            border: none;
+            cursor: pointer;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <header>
-    <div class="inicio">
-        <h1>Bem-vindo ao Facilitatory</h1>
-        <img src="assets/Img_facilitatory.png" alt="logo">
-        <h2>Um aplicativo que vai facilitar sua vida em programas que funcionam via prompt de comando</h2>
-        <p>No momento apenas disponivel para manipular o ffmpeg.</p>     
-    </div>
-</header>
-<main>
-    <div class="vazio"></div>
-     <div class="baixar">
-        <h2>Baixe agora Facilitatory to ffmpeg:</h2>
-        <a href="https://github.com/Haduka1/Facilitatory/releases/download/v1.0/Facilitatory.exe" target=".exe">
-            <button class="botao1">Download do Aplicativo</button>
-        </a>
+        <nav>
+            <a href="#baixar">Download</a>
+            <a href="#tutorial-info">Tutorial</a>
+            <a href="#pix">Apoie</a>
+            <a href="#contato">Contato</a>
+        </nav>
+        <div class="inicio">
+            <h1>Bem-vindo ao Facilitatory</h1>
+            <img src="assets/Img_facilitatory.png" alt="logo" style="width: 200px;">
+            <h2>Um aplicativo que vai facilitar sua vida em programas que funcionam via prompt de comando</h2>
+            <p>No momento, apenas disponível para manipular o FFmpeg.</p>
         </div>
-        <div class="pix">
-        <h2>Apoie nosso trabalho</h2>
-        <p>Escaneie o QR Code abaixo para apoiar via Pix.</p>
-        <img class="pix_img" src="assets/Screenshot_pix_gabrielcapocchi.jpg" alt="QR Code Pix">
-        <p>Chave pix: d1d2d621-1370-4acd-99c4-34cf3f3b3ee0</p>
-    </div>
-</main>
+    </header>
+    <main>
+        <div id="baixar" class="baixar">
+            <h2>Baixe agora Facilitatory para FFmpeg:</h2>
+            <a href="https://github.com/Haduka1/Facilitatory/releases/download/v1.0/Facilitatory.exe">
+                <button class="botao1">Download do Aplicativo</button>
+            </a>
+        </div>
+        <div id="tutorial-info" class="tutorial-info">
+            <p>Antes de usar o Facilitatory, baixe o ffmpeg no seu computador <a href="https://www.gyan.dev/ffmpeg/builds/ffmpeg-git-full.7z">Link download direto</a>, 
+                ou, se preferir, entre no site e baixe a versão desejada <a href="https://www.ffmpeg.org/" target="_blank">https://www.ffmpeg.org</a>.</p>
+        </div>
+        <div id="tutorial-section">
+            <button class="show-tutorial-btn" onclick="toggleTutorial()">⬇️ Mostrar Tutorial</button>
+            <div class="tutorial">
+                <h3 class="tutor">Tutorial</h3>
+                <div class="tutorial-grid">
+                    <div class="tutorial-item">
+                        <p>1. Extraia os arquivos da pasta baixada:</p>
+                        <img src="assets/img_extrair.png" alt="Extraindo arquivos">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>2. Renomeie a pasta para "ffmpeg". Caso tenha outra pasta com o mesmo nome dentro, renomeie-a também.</p>
+                        <img src="assets/img_renomear.png" alt="Renomeando pasta">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>3. Mova a pasta renomeada para o disco C:</p>
+                        <img src="assets/img_mover.png" alt="Movendo pasta para disco C">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>4. Abra a pasta do ffmpeg, localize a pasta "bin" e clique com o botão direito para "Copiar como caminho" (Ctrl + Shift + C):</p>
+                        <img src="assets/img_bin.png" alt="Caminho bin">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>5. No menu iniciar, abra "Variáveis de ambiente do sistema":</p>
+                        <img src="assets/img_abrirvariavel.png" alt="Acessando variáveis de ambiente">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>6. Na aba "Avançado", clique em "Variáveis de ambiente":</p>
+                        <img src="assets/img_variaveis.png" alt="Configuração do Path">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>7. Clique duas vezes em "Path", depois em "Novo" e cole o caminho copiado da pasta "bin".</p>
+                        <img src="assets/img_path.png" alt="Configurando Path">
+                    </div>
+                    <div class="tutorial-item">
+                        <p>8. Finalize clicando em OK para salvar as configurações:</p>
+                        <img src="assets/img_final.png" alt="Concluindo configurações">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="pix" class="pix">
+            <h2>Apoie nosso trabalho</h2>
+            <p>Escaneie o QR Code abaixo para apoiar via Pix:</p>
+            <img class="pix_img" src="assets/Screenshot_pix_gabrielcapocchi.jpg" alt="QR Code Pix">
+            <p>Chave Pix: d1d2d621-1370-4acd-99c4-34cf3f3b3ee0</p>
+        </div>
+    </main>
+    <footer>
+        <h3>Todos os direitos reservados para Gabriel Capocchi</h3>
+    </footer>
+    <script>
+        function toggleTutorial() {
+            const tutorial = document.querySelector('.tutorial');
+            const button = document.querySelector('.show-tutorial-btn');
+            if (tutorial.style.display === 'none' || tutorial.style.display === '') {
+                tutorial.style.display = 'block';
+                button.textContent = '⬆️ Esconder Tutorial';
+            } else {
+                tutorial.style.display = 'none';
+                button.textContent = '⬇️ Mostrar Tutorial';
+            }
+        }
+    </script>
 </body>
 </html>
